--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "Macaw",
     "description": "Sexy PHP Router.",
+    "license": "MIT",
     "require": {
         "php": ">=5.3.3"
     }
