Added vendor name to composer file.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Macaw",
+    "name": "Codingbean/Macaw",
     "description": "Sexy PHP Router.",
     "license": "MIT",
     "require": {
