--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "Codingbean/Macaw",
-    "description": "Sexy PHP Router.",
+    "name": "codingbean/macaw",
+    "description": "Sexy PHP router.",
     "license": "MIT",
     "require": {
         "php": ">=5.3.3"
