Add psr-4 autoload

--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,12 @@
 {
-    "name": "codingbean/macaw",
-    "description": "Sexy PHP router.",
-    "license": "MIT",
-    "require": {
-        "php": ">=5.3.3"
-    }
+	"name": "codingbean/macaw",
+	"description": "Sexy PHP router.",
+	"license": "MIT",
+	"require": {
+		"php": ">=5.3.3"
+	},
+	
+	"autoload": {
+		"psr-4": {"": ""}
+	}
 }
