--- a/composer.json
+++ b/composer.json
@@ -2,11 +2,27 @@
 	"name": "noahbuscher/macaw",
 	"description": "Simple PHP router class.",
 	"license": "MIT",
+	"homepage": "https://github.com/noahbuscher/Macaw",
+	"keywords": [
+		"router",
+		"php-router",
+		"php"
+	],
+	"authors": [
+		{
+			"name": "Noah Buscher",
+			"email": "me@noahbuscher.com",
+			"homepage": "http://noahbuscher.com/"
+		}
+	],
 	"require": {
 		"php": ">=5.3.3"
 	},
-	
+	"require-dev": {
+		"phpunit/phpunit": "^4.8-stable",
+		"guzzle/guzzle": "~3.9"
+	},
 	"autoload": {
-		"psr-4": {"NoahBuscher\\Macaw\\": ""}
+		"psr-4": { "NoahBuscher\\Macaw\\": "./" }
 	}
 }
