--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,11 @@
 	"description": "Simple PHP router class.",
 	"license": "MIT",
 	"require": {
-		"php": ">=5.3.3"
+		"php": ">=7.2"
 	},
-	
+	"require-dev": {
+        "phpunit/phpunit": "^8"
+    },
 	"autoload": {
 		"psr-4": {"NoahBuscher\\Macaw\\": ""}
 	}
